--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@heroicons/react": "^2.2.0",
     "@splinetool/react-spline": "^4.0.0",
     "@tailwindcss/vite": "^4.0.6",
     "locomotive-scroll": "^5.0.0-beta.21",
@@ -17,8 +19,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.8.2",
     "swiper": "^11.2.4",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
